[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = "Base version"
authors = ["niladri <niladriforu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.93"
requests = "^2.31.0"
aws-lambda-powertools = "^2.37.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.4.2"
polars = "^0.20.22"
SQLAlchemy = "^2.0.29"
pydantic = "^2.7.1"
elasticsearch = "^8.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
